@@ -1,3 +1,10 @@
+2015-08-18  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* gdb.texinfo (Maintenance Commands): Move documentation of "main
+	info bfds" to...
+	(File Caching): A New section.  Outline bfd caching, and add new
+	description for "main set/show bfd-sharing".
+
 2015-08-14  Doug Evans  <xdje42@gmail.com>
 
 	* gdb.texinfo (Machine Code): Update docs for mixed source/assembly
