@@ -1,5 +1,13 @@
 2015-08-18  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* gdb_bfd.c (bfd_sharing): New variable.
+	(show_bfd_sharing): New function.
+	(gdb_bfd_open): Check bfd_sharing variable.
+	(_initialize_gdb_bfd): Add new set/show command.
+	* NEWS: Mention new command.
+
+2015-08-18  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* gdb_bfd.c (struct gdb_bfd_data): Add size, inode, and device id
 	field.
 	(struct gdb_bfd_cache_search): Likewise.
